--- a/FMWeb/Corpus/css/stylelc.css
+++ b/FMWeb/Corpus/css/stylelc.css
@@ -6,27 +6,29 @@
 .neulctable {
     width: 100%;
     border: 1px #808080 solid;
-    line-height:30px;
+    line-height: 30px;
 }
 
 .wbdiv {
     width: 98%;
     line-height: 30px;
-    padding-left:20px;
-    margin:5px;
+    padding-left: 20px;
+    margin: 5px;
 }
 
-.wbtable{
-    width:98%;
-    line-height:30px;
+.wbtable {
+    width: 98%;
+    line-height: 30px;
 }
-.wbtable tr th{
-    text-align:right;
-    padding:5px;
-}
+
+    .wbtable tr th {
+        text-align: right;
+        padding: 5px;
+    }
+
     .wbtable tr td {
-        text-align:left;
-        padding:5px;
+        text-align: left;
+        padding: 5px;
     }
 
 .info {
@@ -115,11 +117,11 @@
 
 .mnuTopMenu {
     font-size: 15px;
-    padding:5px;
+    padding: 5px;
 }
 
-.mnuStaticItem{
-    border-right:1px solid #808080;
+.mnuStaticItem {
+    border-right: 1px solid #808080;
 }
 
 .resultDiv {
@@ -132,14 +134,14 @@
     border-radius: 15px;
 }
 
-.input-text{
+.input-text {
     border: 1px solid #808080;
     border-radius: 5px 5px 5px 5px;
     font-size: 13px;
     height: 22px;
     line-height: 22px;
     margin-right: 10px;
-    padding-left:5px;
+    padding-left: 5px;
 }
 
 .ta {
@@ -168,23 +170,26 @@
     background-image: none;
     width: 250px;
     margin-right: 10px;
-    line-height:25px;
+    line-height: 25px;
 }
 
-.dropdownlist{
-    height:25px;
+.dropdownlist {
+    height: 25px;
 }
-.cblList{
-    padding-left:10px;
-    padding-right:10px;
+
+.cblList {
+    padding-left: 10px;
+    padding-right: 10px;
 }
-.cblList input {
-    margin-left: 20px;
-    margin-right:10px;
-}
-.cblList label {
-    display: inline-block;
-}
+
+    .cblList input {
+        margin-left: 20px;
+        margin-right: 10px;
+    }
+
+    .cblList label {
+        display: inline-block;
+    }
 
 .fakeContainer {
     float: left;
@@ -195,18 +200,20 @@
     background-color: #ffffff;
     overflow: hidden;
 }
+
 .divbr {
     clear: both;
     width: 100%;
     height: 5px;
 }
+
 .divhr {
     clear: both;
     width: 100%;
-    margin-top:5px;
-    margin-bottom:5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     height: 2px;
-    background-color:#808080;
+    background-color: #808080;
 }
 
 /*语料筛选结果表*/
@@ -216,12 +223,14 @@
     margin: 0 auto;
     width: 100%;
 }
+
     .mytable tr:first-child {
         background: #0066CC;
         color: #fff;
         font-weight: bold;
         padding: 10px;
     }
+
     .mytable th {
         color: #0066CC;
         font-weight: bold;
@@ -229,6 +238,7 @@
         border: 1pt solid #d1e0fb;
         text-align: center;
     }
+
     .mytable td {
         padding: 10px;
         border: 1pt solid #d1e0fb;
@@ -265,7 +275,7 @@
 /*语料彩色可视化*/
 .divmain {
     width: 100%;
-    margin-bottom:10px;
+    margin-bottom: 10px;
 }
 
 .it-ec-textdiv {
@@ -275,9 +285,9 @@
     border: 1px solid #808080;
     line-height: 25px;
     font-size: 12px;
-    padding:5px;
-    height:400px;
-    overflow-y:auto;
+    padding: 5px;
+    height: 400px;
+    overflow-y: auto;
 }
 
 .it-ec-statsdiv {
@@ -299,7 +309,7 @@
     margin: 5px;
     border-bottom: 1px solid #808080;
     padding: 5px;
-    text-align:right;
+    text-align: right;
 }
 
 .outbtndiv-button {
@@ -319,7 +329,7 @@
 
 .it-chart-dl {
     margin-left: 10px;
-    width:400px;
+    width: 400px;
 }
 
 .it-chart-dt {
@@ -421,4 +431,49 @@ span.MW {
     .box #entity {
         width: 100%;
         height: 100%;
+    }
+
+
+/*数字加减键*/
+/*demo css*/
+
+.i_tips {
+    height: 30px;
+    margin-left: 20px;
+    color: #f60;
+    font-size: 14px;
+    line-height: 30px
+}
+
+.i_box {
+    margin: 10px 20px;
+    font-size: 14px;
+    float: left
+}
+
+    .i_box * {
+        vertical-align: middle
+    }
+
+    .i_box a {
+        padding: 2px 5px;
+        background-color: #e9e9e9;
+        border: 1px solid #ccc;
+        text-decoration: none;
+        color: #585858;
+        line-height: 20px
+    }
+
+        .i_box a:hover {
+            color: #000
+        }
+
+    .i_box input {
+        width: 30px;
+        height: 18px;
+        margin: 0 8px;
+        padding: 2px;
+        border: 1px solid #ccc;
+        text-align: center;
+        line-height: 16px
     }
